[tool.poetry]
name = "databricks-aws-utils"
version = "1.2.1"
description = "Databricks AWS Utils"
license = "Proprietary"
authors = [ "Lucas Vieira <lucas.vieira94@outlook.com>" ]
maintainers = [ "Lucas Vieira <lucas.vieira94@outlook.com>" ]
readme = "README.md"
repository = "https://github.com/lucasvieirasilva/databricks-aws-utils"

  [[tool.poetry.packages]]
  include = "databricks_aws_utils"

  [tool.poetry.dependencies]
  python = ">=3.7,<3.10"

  [tool.poetry.dev-dependencies]
  flake8 = "3.9.2"
  autopep8 = "1.5.7"
  delta-spark = "1.0.0"
  pyspark = "3.1.2"
  boto3 = "1.20.5"
  pydoc-markdown = "4.3.2"

[build-system]
requires = [ "poetry-core==1.0.3" ]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
src_paths = ["databricks_aws_utils"]
py_version = 37
skip_gitignore = true
