[tool.poetry]
name = "databricks-aws-utils"
version = "1.4.0"
description = "Databricks AWS Utils"
license = "Proprietary"
authors = [ "Lucas Vieira <lucas.vieira94@outlook.com>" ]
maintainers = [ "Lucas Vieira <lucas.vieira94@outlook.com>" ]
readme = "README.md"
repository = "https://github.com/lucasvieirasilva/databricks-aws-utils"

  [[tool.poetry.packages]]
  include = "databricks_aws_utils"

  [tool.poetry.dependencies]
  python = ">=3.8.1,<4.0"

  [tool.poetry.group.dev.dependencies]
  flake8 = "^6.1.0"
  autopep8 = "^2.0.4"
  delta-spark = "^2.3.0"
  pyspark = "3.3.2"
  boto3 = "1.20.5"
  python-semantic-release = "^8.0.8"
  pre-commit = "^3.4.0"
  commitizen = "^3.8.0"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
src_paths = ["databricks_aws_utils"]
py_version = 37
skip_gitignore = true

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
major_on_zero = false
branch = "main"
upload_to_release = true
build_command = "pip install poetry && poetry build"
commit_message = "chore(release): {version} [skip ci]"
tag_format = "v{version}"
